<?xml version="1.0"?><package>
  <name>sodahead_ctl</name>
  <version>0.1.0</version>
  <description>ROS driver for the sodahead controller</description>
  <maintainer email="geh@wayspace.com">George Hoffman</maintainer>

  <license>BSD</license>

  <author email="geh@wayspace.com">George Hoffman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>